impl. Genetic Algorithm

--- a/notebooks/travelling_knapsack.ipynb
+++ b/notebooks/travelling_knapsack.ipynb
@@ -9,19 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from dataclasses import dataclass\n",
+    "from numpy.random import default_rng\n",
+    "from numpy.random import Generator\n",
     "from pathlib import Path\n",
     "from typing import Optional, List, Set, Dict, Tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,12 +66,13 @@
     "        return {'name': self.name, 'items': self.items}\n",
     "\n",
     "    def to_dicts(self):\n",
-    "        return [{'name': self.name,\n",
-    "                 'item': item.name,\n",
-    "                 'value': item.value,\n",
-    "                 'weight': item.weight,\n",
-    "                 'tts': item.tts}\n",
-    "                for item in self.items]\n",
+    "        return [{\n",
+    "            'name': self.name,\n",
+    "            'item': item.name,\n",
+    "            'value': item.value,\n",
+    "            'weight': item.weight,\n",
+    "            'tts': item.tts\n",
+    "        } for item in self.items]\n",
     "\n",
     "    def __hash__(self) -> int:\n",
     "        return self.name.__hash__()"
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,11 +134,14 @@
     "        return list(self.edges.values())\n",
     "\n",
     "    def get_connections_from_node(self, node: Node) -> List[Edge]:\n",
-    "        return self.connections.get(node, [])\n",
+    "        return self.connections.get(node, {})\n",
     "\n",
     "    def get_connections_from(self, node_name: str) -> List[Edge]:\n",
     "        node: Optional[Node] = self.get_node(node_name)\n",
     "        return self.get_connections_from_node(node)\n",
+    "\n",
+    "    def find_connection_between(self, src: Node, dst: Node) -> Optional[Edge]:\n",
+    "        return self.edges.get((src, dst), None)\n",
     "\n",
     "    def add_edge(self, src: str, dst: str, tt: int, tc: float) -> 'Graph':\n",
     "        source = self.nodes.get(src, Node(src))\n",
@@ -169,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +226,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes, edges = g.to_pandas_df()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,17 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes, edges = g.to_pandas_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 205,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -304,7 +314,7 @@
        "2  Riacho de Fevereiro  Cálice do Santo Graal   7000       2    6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,8 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 206,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -378,7 +392,7 @@
        "2   Escondidos       Campos                5              350"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,24 +410,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass(frozen=False)\n",
+    "class Individual:\n",
+    "    genes: List[Node]\n",
+    "    total_income: float\n",
+    "    travelling_cost: float\n",
+    "    traveling_time: int\n",
+    "    time_to_steal: int\n",
+    "\n",
+    "    @property\n",
+    "    def profit(self):\n",
+    "        return self.total_income - self.travelling_cost\n",
+    "\n",
+    "    @property\n",
+    "    def total_time(self):\n",
+    "        return self.traveling_time + self.time_to_steal\n",
+    "\n",
+    "    @property\n",
+    "    def score(self):\n",
+    "        return self.profit/self.total_time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
     "class GeneticAlgorithm:\n",
     "    graph: Graph\n",
+    "    genes: Set[Node]\n",
+    "    rng: Generator\n",
     "\n",
     "    def __init__(self, graph: Graph):\n",
     "        self.graph = graph\n",
+    "        self.genes = list(graph.get_all_nodes())\n",
+    "        self.rng = default_rng()\n",
+    "\n",
+    "    def generate_initial_batch(self, size: int = 10) -> List[Individual]:\n",
+    "        length = len(self.genes)\n",
+    "        return [self.generate_individual(length) for i in range(size)]\n",
+    "\n",
+    "    def generate_individual(self, number_of_genes: int):\n",
+    "        genes = self.generate_individual_genes(number_of_genes)\n",
+    "        tuples: Tuple[Node, Node] = [(genes[idx], genes[num]) for idx, num in enumerate(range(1, len(genes)))]\n",
+    "        connections: List[Edge] = [self.graph.find_connection_between(src, dest) for src, dest in tuples]\n",
+    "\n",
+    "        total_income: float = 0.0\n",
+    "        travelling_cost: float = 0.0\n",
+    "        travelling_time: int = 0\n",
+    "        time_to_steal: int = 0\n",
+    "\n",
+    "        for c in connections:\n",
+    "            print(c)\n",
+    "            items = [(i.value, i.weight, i.tts) for i in c.destination.items]\n",
+    "            print(items)\n",
+    "            print(\"===========================================================================\")\n",
+    "\n",
+    "\n",
+    "    def generate_individual_genes(self, number: int) -> List[Node]:\n",
+    "        indexes = self.rng.choice(number, size=number, replace=False)\n",
+    "        genes: List[Node] = [self.genes[idx] for idx in indexes]\n",
+    "\n",
+    "        starting_point: Node = self.graph.get_node(\"Escondidos\")\n",
+    "        endpoint_idx: int = (genes.index(starting_point))\n",
+    "        individual_genes: List[Node] = [starting_point] + genes[0:endpoint_idx+1]\n",
+    "        return individual_genes\n",
+    "\n",
+    "    def fitness(self, indv: Individual):\n",
+    "        pass\n",
     "\n",
     "    def mutation(self):\n",
     "        pass\n",
     "\n",
-    "    def fitness(self):\n",
-    "        pass\n",
     "\n",
     "    def cross_over(self):\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ga = GeneticAlgorithm(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edge(source=Node(name='Escondidos', items=set()), destination=Node(name='Granada', items={Item(name='Fóssil da primeira galinha conhecida', value=2500, weight=2, time_to_steal=1)}), travelling_time=7, travelling_cost=413)\n",
+      "[(2500, 2, 1)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Granada', items={Item(name='Fóssil da primeira galinha conhecida', value=2500, weight=2, time_to_steal=1)}), destination=Node(name='Além-do-Mar', items={Item(name='Maior diamante do continente', value=5400, weight=2, time_to_steal=10)}), travelling_time=6, travelling_cost=582)\n",
+      "[(5400, 2, 10)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Além-do-Mar', items={Item(name='Maior diamante do continente', value=5400, weight=2, time_to_steal=10)}), destination=Node(name='Foz da Água Quente', items={Item(name='Quadro do maior pintor do século', value=2000, weight=4, time_to_steal=4)}), travelling_time=2, travelling_cost=292)\n",
+      "[(2000, 4, 4)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Foz da Água Quente', items={Item(name='Quadro do maior pintor do século', value=2000, weight=4, time_to_steal=4)}), destination=Node(name='Limões', items={Item(name='Capacete de guerra antigo', value=4000, weight=2, time_to_steal=4)}), travelling_time=1, travelling_cost=143)\n",
+      "[(4000, 2, 4)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Limões', items={Item(name='Capacete de guerra antigo', value=4000, weight=2, time_to_steal=4)}), destination=Node(name='Lagos', items={Item(name='Primeira moeda de $1 do país', value=3000, weight=1, time_to_steal=7)}), travelling_time=8, travelling_cost=952)\n",
+      "[(3000, 1, 7)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Lagos', items={Item(name='Primeira moeda de $1 do país', value=3000, weight=1, time_to_steal=7)}), destination=Node(name='Algas', items={Item(name='Colar de casamento da rainha Vanessa', value=2500, weight=1, time_to_steal=7)}), travelling_time=3, travelling_cost=435)\n",
+      "[(2500, 1, 7)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Algas', items={Item(name='Colar de casamento da rainha Vanessa', value=2500, weight=1, time_to_steal=7)}), destination=Node(name='Santa Paula', items={Item(name='Coroa do Rei João II', value=10000, weight=5, time_to_steal=10)}), travelling_time=5, travelling_cost=370)\n",
+      "[(10000, 5, 10)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Santa Paula', items={Item(name='Coroa do Rei João II', value=10000, weight=5, time_to_steal=10)}), destination=Node(name='Guardião', items={Item(name='Primeira edição do livro \"O Livro Azul\"', value=3000, weight=1, time_to_steal=2)}), travelling_time=9, travelling_cost=693)\n",
+      "[(3000, 1, 2)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Guardião', items={Item(name='Primeira edição do livro \"O Livro Azul\"', value=3000, weight=1, time_to_steal=2)}), destination=Node(name='Porto', items={Item(name='Fecha do caçador pré-histórico', value=2300, weight=1, time_to_steal=2)}), travelling_time=7, travelling_cost=455)\n",
+      "[(2300, 1, 2)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Porto', items={Item(name='Fecha do caçador pré-histórico', value=2300, weight=1, time_to_steal=2)}), destination=Node(name='Campos', items={Item(name='Espada sagrada', value=6500, weight=6, time_to_steal=5)}), travelling_time=9, travelling_cost=1017)\n",
+      "[(6500, 6, 5)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Campos', items={Item(name='Espada sagrada', value=6500, weight=6, time_to_steal=5)}), destination=Node(name='Leão', items={Item(name='Taça da Copa do Mundo de Corrida de Cavalo', value=4000, weight=2, time_to_steal=5)}), travelling_time=3, travelling_cost=234)\n",
+      "[(4000, 2, 5)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Leão', items={Item(name='Taça da Copa do Mundo de Corrida de Cavalo', value=4000, weight=2, time_to_steal=5)}), destination=Node(name='Ponte-do-Sol', items={Item(name='Busto do líder da Revolução Pavão', value=1500, weight=6, time_to_steal=5)}), travelling_time=3, travelling_cost=168)\n",
+      "[(1500, 6, 5)]\n",
+      "===========================================================================\n",
+      "Edge(source=Node(name='Ponte-do-Sol', items={Item(name='Busto do líder da Revolução Pavão', value=1500, weight=6, time_to_steal=5)}), destination=Node(name='Escondidos', items=set()), travelling_time=9, travelling_cost=504)\n",
+      "[]\n",
+      "===========================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "individuals: List[Individual] = ga.generate_initial_batch(size=1)"
    ]
   },
   {
