--- a/notebooks/travelling_knapsack.ipynb
+++ b/notebooks/travelling_knapsack.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,19 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass(frozen=False)\n",
     "class Individual:\n",
     "    genes: List[Node]\n",
-    "    \n",
+    "    extra_genes: List[Node]\n",
     "    total_income: float\n",
     "    travelling_cost: float\n",
     "    traveling_time: int\n",
     "    time_to_steal: int\n",
     "    carry_weight: int\n",
+    "    generation: int\n",
     "\n",
     "    @property\n",
     "    def profit(self):\n",
@@ -255,12 +256,21 @@
     "\n",
     "    @property\n",
     "    def score(self):\n",
-    "        return self.profit/self.total_time"
+    "        return self.profit/self.total_time\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        try:\n",
+    "            return self.genes == other.genes\n",
+    "        except Exception:\n",
+    "            return False\n",
+    "\n",
+    "    def __hash__(self):\n",
+    "        return sum([n.__hash__() for n in self.genes])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,48 +290,7 @@
     "\n",
     "    def generate_initial_batch(self, size: int = 10) -> List[Individual]:\n",
     "        length = len(self.genes)\n",
-    "        return [self.generate_individual(length) for i in range(size)]\n",
-    "\n",
-    "    def generate_individual(self, number_of_genes: int):\n",
-    "        while True:\n",
-    "            genes = self.generate_individual_genes(number_of_genes)\n",
-    "            tuples: Tuple[Node, Node] = [(genes[idx], genes[num]) for idx, num in enumerate(range(1, len(genes)))]\n",
-    "            connections: List[Edge] = [self.graph.find_connection_between(src, dest) for src, dest in tuples if (src != dest)]\n",
-    "\n",
-    "            if len(connections) == 0:\n",
-    "                continue\n",
-    "\n",
-    "            travelling_cost: float = 0.0\n",
-    "            travelling_time: int = 0\n",
-    "            total_income: float = 0.0\n",
-    "            time_to_steal: int = 0\n",
-    "            total_weight: int = 0\n",
-    "\n",
-    "            for cx in connections:\n",
-    "                travelling_cost += cx.travelling_cost\n",
-    "                travelling_time += cx.travelling_time\n",
-    "                total_income += cx.destination.to_dict().get('value', 0)\n",
-    "                time_to_steal += cx.destination.to_dict().get('tts', 0)\n",
-    "                total_weight += cx.destination.to_dict().get('weight', 0)\n",
-    "\n",
-    "            indv = Individual(genes,\n",
-    "                              total_income=total_income,\n",
-    "                              time_to_steal=time_to_steal,\n",
-    "                              travelling_cost=travelling_cost,\n",
-    "                              traveling_time=travelling_time,\n",
-    "                              carry_weight=total_weight)\n",
-    "\n",
-    "            if self.fitness(indv) > 0:\n",
-    "                return indv\n",
-    "\n",
-    "    def generate_individual_genes(self, number: int) -> List[Node]:\n",
-    "        indexes = self.rng.choice(number, size=number, replace=False)\n",
-    "        genes: List[Node] = [self.genes[idx] for idx in indexes]\n",
-    "\n",
-    "        starting_point: Node = self.graph.get_node(\"Escondidos\")\n",
-    "        endpoint_idx: int = (genes.index(starting_point))\n",
-    "        individual_genes: List[Node] = [starting_point] + genes[0:endpoint_idx+1]\n",
-    "        return individual_genes\n",
+    "        return [self._generate_individual(length) for i in range(size)]\n",
     "\n",
     "    def fitness(self, indv: Individual) -> int:\n",
     "        if indv.carry_weight > self.max_weight or indv.total_time > self.max_hours:\n",
@@ -332,14 +301,81 @@
     "    def mutation(self):\n",
     "        pass\n",
     "\n",
+    "    def cross_over(self, indvA: Individual, indvB: Individual) -> List[Individual]:\n",
+    "        gene = [self.graph.get_node('Escondidos')]\n",
+    "        next_gen = max(indvA.generation, indvB.generation)+1\n",
     "\n",
-    "    def cross_over(self):\n",
-    "        pass"
+    "\n",
+    "        indvC = self.generate_individual_with(genes=list(gene + indvB.extra_genes + gene),\n",
+    "                                              extra_genes=list(indvA.genes[1:-1]),\n",
+    "                                              generation = next_gen)\n",
+    "\n",
+    "        indvD = self.generate_individual_with(genes=list(gene + indvA.extra_genes + gene),\n",
+    "                                              extra_genes=list(indvA.genes[1:-1]), \n",
+    "                                              generation = next_gen)\n",
+    "\n",
+    "        cross_over_population = list()\n",
+    "\n",
+    "        if self.fitness(indvC) > 0:\n",
+    "            cross_over_population.append(indvC)\n",
+    "        if self.fitness(indvD) > 0:\n",
+    "            cross_over_population.append(indvC)\n",
+    "\n",
+    "        return cross_over_population\n",
+    "\n",
+    "\n",
+    "    def generate_individual_with(self, genes, extra_genes, generation: int = 0):\n",
+    "        tuples: Tuple[Node, Node] = [(genes[idx], genes[num]) for idx, num in enumerate(range(1, len(genes)))]\n",
+    "        connections: List[Edge] = [self.graph.find_connection_between(src, dest) for src, dest in tuples if (src != dest)]\n",
+    "\n",
+    "        if len(connections) == 0:\n",
+    "            return None\n",
+    "\n",
+    "        travelling_cost: float = 0.0\n",
+    "        travelling_time: int = 0\n",
+    "        total_income: float = 0.0\n",
+    "        time_to_steal: int = 0\n",
+    "        total_weight: int = 0\n",
+    "\n",
+    "        for cx in connections:\n",
+    "            travelling_cost += cx.travelling_cost\n",
+    "            travelling_time += cx.travelling_time\n",
+    "            total_income += cx.destination.to_dict().get('value', 0)\n",
+    "            time_to_steal += cx.destination.to_dict().get('tts', 0)\n",
+    "            total_weight += cx.destination.to_dict().get('weight', 0)\n",
+    "\n",
+    "        indv = Individual(genes, total_income=total_income, time_to_steal=time_to_steal,\n",
+    "                          travelling_cost=travelling_cost, traveling_time=travelling_time,\n",
+    "                          carry_weight=total_weight, extra_genes=extra_genes,\n",
+    "                          generation=generation)\n",
+    "        return indv\n",
+    "\n",
+    "\n",
+    "    def _generate_individual(self, number_of_genes: int):\n",
+    "        while True:\n",
+    "            genes, extra_genes = self._generate_individual_genes(number_of_genes)\n",
+    "            indv: Individual = self.generate_individual_with(genes=genes, extra_genes=extra_genes)\n",
+    "\n",
+    "            if indv == None:\n",
+    "                continue\n",
+    "\n",
+    "            if self.fitness(indv) > 0:\n",
+    "                return indv\n",
+    "\n",
+    "    def _generate_individual_genes(self, number: int) -> Tuple[List[Node], List[Node]]:\n",
+    "        indexes = self.rng.choice(number, size=number, replace=False)\n",
+    "        genes: List[Node] = [self.genes[idx] for idx in indexes]\n",
+    "\n",
+    "        starting_point: Node = self.graph.get_node(\"Escondidos\")\n",
+    "        endpoint_idx: int = genes.index(starting_point)\n",
+    "        individual_genes: List[Node] = [starting_point] + genes[0:endpoint_idx+1]\n",
+    "        extra_genes: List[Node] = genes[endpoint_idx+1:]\n",
+    "        return individual_genes, extra_genes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,128 +384,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
-    "individuals: List[Individual] = ga.generate_initial_batch(size=10)"
+    "population: List[Individual] = ga.generate_initial_batch(size=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, indv in enumerate(population[:-1]):\n",
+    "    a = indv\n",
+    "    b = population[idx+1]\n",
+    "    new_population = ga.cross_over(a, b)\n",
+    "    population = population + new_population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "102"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(individuals)"
+    "len(population)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "329.8181818181818\n",
-      "319.81159420289856\n",
-      "360.4492753623188\n",
-      "403.81944444444446\n",
-      "189.55882352941177\n",
-      "307.1764705882353\n",
-      "336.390243902439\n",
-      "80.0\n",
-      "324.0\n",
-      "216.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in individuals:\n",
-    "    print(i.score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = individuals[2]\n",
-    "y = individuals[1]"
+    "sorted_population = sorted(set(population), key=lambda indv: indv.score, reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Node(name='Campos', item=Item(name='Espada sagrada', value=6500, weight=6, time_to_steal=5)),\n",
-       " Node(name='Lagos', item=Item(name='Primeira moeda de $1 do país', value=3000, weight=1, time_to_steal=7)),\n",
-       " Node(name='Leão', item=Item(name='Taça da Copa do Mundo de Corrida de Cavalo', value=4000, weight=2, time_to_steal=5)),\n",
-       " Node(name='Além-do-Mar', item=Item(name='Maior diamante do continente', value=5400, weight=2, time_to_steal=10)),\n",
-       " Node(name='Porto', item=Item(name='Fecha do caçador pré-histórico', value=2300, weight=1, time_to_steal=2)),\n",
-       " Node(name='Guardião', item=Item(name='Primeira edição do livro \"O Livro Azul\"', value=3000, weight=1, time_to_steal=2)),\n",
-       " Node(name='Limões', item=Item(name='Capacete de guerra antigo', value=4000, weight=2, time_to_steal=4))]"
+       "792"
       ]
      },
-     "execution_count": 564,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.genes[1:-1]"
+    "len(sorted_population)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Node(name='Guardião', item=Item(name='Primeira edição do livro \"O Livro Azul\"', value=3000, weight=1, time_to_steal=2)),\n",
-       " Node(name='Ponte-do-Sol', item=Item(name='Busto do líder da Revolução Pavão', value=1500, weight=6, time_to_steal=5)),\n",
-       " Node(name='Além-do-Mar', item=Item(name='Maior diamante do continente', value=5400, weight=2, time_to_steal=10)),\n",
-       " Node(name='Campos', item=Item(name='Espada sagrada', value=6500, weight=6, time_to_steal=5)),\n",
-       " Node(name='Leão', item=Item(name='Taça da Copa do Mundo de Corrida de Cavalo', value=4000, weight=2, time_to_steal=5)),\n",
-       " Node(name='Algas', item=Item(name='Colar de casamento da rainha Vanessa', value=2500, weight=1, time_to_steal=7)),\n",
-       " Node(name='Porto', item=Item(name='Fecha do caçador pré-histórico', value=2300, weight=1, time_to_steal=2))]"
-      ]
-     },
-     "execution_count": 565,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.genes[1:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a2 = sorted_population[1]"
+   ]
   }
  ],
  "metadata": {
